--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.1",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-native-vector-icons/material-design-icons": "^12.0.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
@@ -21,12 +22,14 @@
     "@react-navigation/native-stack": "^7.3.21",
     "expo": "^53.0.16",
     "expo-auth-session": "~6.2.1",
+    "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-crypto": "~14.1.5",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.6",
     "expo-router": "~5.1.2",
     "expo-splash-screen": "~0.30.9",
@@ -49,9 +52,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "^13.13.5",
-    "tailwindcss": "^3.4.17",
-    "expo-image-picker": "~16.1.4",
-    "expo-av": "~15.1.7"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
